2003-09-26  Matt Thomas  <matt@3am-software.com>

	* config/tc-vax.c (md_shortopts): Fix a typo.  Remove 'K'.
	(OPTION_PIC): Define.
	(md_longopts): Add "pic" option.
	(md_parse_option): Change 'K' to OPTION_PIC.

2003-09-23  Alan Modra  <alan@modra.org>

	* config/obj-elf.c (obj_elf_change_section): Adjust for
	_bfd_elf_get_sec_type_attr changes.  Allow SHF_MERGE and SHF_STRINGS
	to be set when defaults are not.  Don't set attr from defaults if
	old_sec.

2003-09-18  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.c (macro_build_ldst_constoffset): Don't silently
	truncate values which won't fit im 32 bits.
	(load_register): Likewise.
	(macro): Likewise.

2003-09-17  Dmitry Diky <diwil@mail.ru>

	* config/tc-msp430.c (MAX_OP_LEN): Set to 256.
	(msp430_operands): Remove redundant l2[16] within switch-case.

2003-09-16  Ralf Corsepius  <corsepiu@faw.uni-ulm.de>

	* configure.in: Handle arm-*-rtems* and thumb-*rtems*.
	* configure: Regenerate.

2003-09-14  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.c (HAVE_64BIT_ADDRESS_CONSTANTS): Remove.
	(macro_build_ldst_constoffset): Sign-extend 32-bit constants. Change
	the function prototype.
	(load_register): Likewise. Simplify the checks for sign-extended
	constants.
	(macro): Likewise. Fix code generation for 64-bit address constants
	outside the 32-bit compatibility space. Adjust
	macro_build_ldst_constoffset calls.
	(s_cprestore): Adjust macro_build_ldst_constoffset call.

2003-09-11  Bob Wilson  <bob.wilson@acm.org>

	* config/tc-xtensa.c (insn_labels, free_insn_labels, saved_insn_labels,
	literal_syms): New global variables.
	(xtensa_define_label, add_target_symbol, xtensa_find_label,
	map_over_defined_symbols, is_loop_target_label,
	xtensa_mark_target_fragments, xtensa_move_frag_symbol,
	xtensa_move_frag_symbols, defined_symbols, branch_targets): Delete.
	(xtensa_begin_directive): Call md_flush_pending_output.  Move symbols